--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prisma": "^5.10.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2"
+    "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.3"
   }
 }
